--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
             <input type="number" id="muGoalInput" placeholder="เป้าหมาย MU/วัน">
             <button id="calculateButton">📊 คำนวณ</button>
             
-            <button id="dailyAverageButton" class="action-button" style="margin-top: 2em;">📈 ค่าเฉลี่ยยอดจัดรายวัน</button>
-
             <div class="info-card photo-card" style="margin-top: 2em;">
                 <h2>📸 รูปภาพประจำวัน</h2>
                 <div id="photoPreviewContainer" style="display: none;">
@@ -36,8 +34,9 @@
     </div>
 
     <button id="duckButton" class="floating-button" aria-label="ไปหน้าเป็ด">🦆</button>
-    <button id="fullscreenButton" class="floating-button" aria-label="เปิด/ปิดเต็มจอ">📱</button>
     <button id="cameraButton" class="floating-button" aria-label="ถ่ายรูป">📸</button>
+    <button id="fullscreenButton" class="floating-button" aria-label="เปิด/ปิดเต็มจอ">📱</button>
+    <button id="dailyAverageButton" class="floating-button" aria-label="ไปหน้าค่าเฉลี่ย">💰</button>
 
     <input type="file" id="photoInput" accept="image/*" capture="environment" style="display: none;">
 
@@ -89,13 +88,6 @@
                 dailyPhotoPreview.src = savedPhotoDataUrl;
                 photoPreviewContainer.style.display = 'block';
             }
-
-            // จัดตำแหน่งปุ่มกล้องลอยให้เป็นระเบียบ (สำหรับหน้า Index)
-            // homeButton ไม่มีในหน้า index จึงต้องเลื่อนตำแหน่งปุ่มอื่นๆ
-            cameraButton.style.marginTop = '-120px'; // ตั้งค่าตำแหน่งเริ่มต้น
-            duckButton.style.marginTop = '-40px';
-            fullscreenButton.style.marginTop = '40px';
-
 
             // เมื่อกดปุ่มกล้อง (Floating Button) ให้คลิก input type="file" ที่ซ่อนไว้
             cameraButton.addEventListener('click', () => {
