--- a/daily_average.html
+++ b/daily_average.html
@@ -1,283 +1,146 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>โปรแกรมคำนวณค่าเฉลี่ย Order Picker</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>💰 ค่าเฉลี่ยยอดจัดรายวัน</title>
     <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="style.css" />
-    <style>
-        body, input, button, p, h1, h2, h3 {
-            font-family: 'Kanit', sans-serif;
-            font-weight: 400;
-            line-height: 1.5;
-        }
-        .input-wrapper {
-            width: 100%;
-            max-width: 350px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-        input {
-            width: 100%;
-            font-size: 1.1em;
-            box-sizing: border-box;
-            padding: 12px;
-            border-radius: 8px;
-            border: 1px solid #ccc;
-            background: rgba(255, 255, 255, 0.2);
-            color: white;
-        }
-        input::placeholder {
-            color: #ddd;
-        }
-        button {
-            width: 100%;
-            max-width: 350px;
-            font-size: 1.2em;
-            padding: 12px;
-            border-radius: 8px;
-            border: none;
-            background: linear-gradient(135deg, #00c6ff, #0072ff);
-            color: white;
-            font-weight: bold;
-            cursor: pointer;
-            transition: transform 0.2s ease, box-shadow 0.2s ease;
-        }
-        button:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 6px 18px rgba(0, 0, 0, 0.4);
-        }
-        /* ปรับ Footer ให้พอดีกับหน้าจอ */
-        footer {
-            margin-top: 3em;
-            padding: 1.5em;
-            text-align: center;
-            font-size: 0.75em; /* ลดขนาดลง 30% */
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 12px;
-            max-width: 85%;
-            margin-left: auto;
-            margin-right: auto;
-            position: relative;
-        }
-        footer p {
-            margin: 0.5em 0;
-            color: #ddd;
-        }
-        /* เพิ่มลูกเล่นตกแต่ง */
-        .footer-icon {
-            display: inline-block;
-            font-size: 1.2em;
-            margin: 0 6px;
-        }
-        /* ให้ footer ปรับตามมือถือ */
-        @media (max-width: 480px) {
-            footer {
-                font-size: 0.65em;
-                padding: 1em;
-                max-width: 95%;
-            }
-            footer p {
-                margin: 0.4em 0;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="background"></div>
-
     <div class="content-wrapper fade-slide-in">
         <main>
-            <h1 class="title-no-wrap">📦 โปรแกรมคำนวณค่าเฉลี่ย Order Picker</h1>
-            <form id="averageForm" class="centered-form">
-                <div class="input-wrapper">
-                    <input type="number" id="sku" placeholder="✅ SKU ที่ทำได้แล้ว" required />
-                </div>
-                <div class="input-wrapper">
-                    <input type="number" id="mu" placeholder="✅ MU ที่ทำได้แล้ว" required />
-                </div>
-                <div class="input-wrapper">
-                    <input type="number" id="days" placeholder="📅 จำนวนวันทำงาน" required />
-                </div>
-                <button type="submit">🔍 คำนวณค่าเฉลี่ย</button>
-            </form>
+            <h1>📈 ค่าเฉลี่ยยอดจัดรายวัน</h1>
 
-            <div class="info-card" style="margin-top: 2em; display: none;" id="resultCard">
-                <h2>📊 ผลลัพธ์ค่าเฉลี่ย</h2>
-                <p>ค่าเฉลี่ย SKU/วัน: <span id="avgSku"></span></p>
-                <p>ค่าเฉลี่ย MU/วัน: <span id="avgMu"></span></p>
-                <button id="resetButton" class="clear-button" style="margin-top: 1.5em;">🗑️ ล้างข้อมูล</button>
+            <div class="info-card">
+                <h2>🎯 เป้าหมายประจำวัน</h2>
+                <p>เป้าหมาย SKU ต่อวัน: <span id="targetSku">0</span></p>
+                <p>เป้าหมาย MU ต่อวัน: <span id="targetMu">0</span></p>
             </div>
 
-            <div class="info-card photo-card" style="margin-top: 2em; display: none;" id="photoCardContainer">
-                <h2>📸 รูปภาพประจำวัน</h2>
-                <div id="photoPreviewContainer">
-                    <img id="dailyPhotoPreview" alt="รูปภาพประจำวัน" style="max-width: 100%; height: auto; border-radius: 10px; margin-top: 15px; border: 2px solid rgba(255, 255, 255, 0.5);">
-                    <button id="clearPhotoButton" class="clear-button" style="margin-top: 15px;">🗑️ ลบรูปภาพ</button>
+            <div class="info-card">
+                <h2>📊 ความคืบหน้าการจัดวันนี้</h2>
+                <div class="input-group">
+                    <input type="number" id="currentSku" placeholder="จำนวน SKU ที่จัดแล้ว">
+                </div>
+                <div class="progress-bar-container">
+                    <div id="skuProgressBar" class="progress-bar">0%</div>
+                </div>
+
+                <div class="input-group">
+                    <input type="number" id="currentMu" placeholder="จำนวน MU ที่จัดแล้ว">
+                </div>
+                <div class="progress-bar-container">
+                    <div id="muProgressBar" class="progress-bar">0%</div>
                 </div>
             </div>
 
+            <div class="buttons-group">
+                <button id="clearDataButton" class="clear-button">🗑️ เคลียร์ข้อมูล</button>
+            </div>
         </main>
-
-        <footer>
-            <p>เว็บไซต์นี้ถูกพัฒนาขึ้นเพื่อช่วยคำนวณค่าเฉลี่ยออเดอร์</p>
-            <p>โดยเน้นให้ผู้ใช้งานสามารถกรอกข้อมูลและรับผลลัพธ์ได้รวดเร็ว</p>
-            <p>โค้ดเขียนด้วย HTML, CSS และ JavaScript เพื่อให้โหลดไว</p>
-            <p>พัฒนาโดย Jack Makro © 2025 | ทีมงาน: Team Dev RoshanzeroX</p>
-            <p><span class="footer-icon">📞</span> ติดต่อ: P'Jack OCS Lock 12</p>
-        </footer>
     </div>
 
     <button id="homeButton" class="floating-button" aria-label="กลับหน้าหลัก">🏠</button>
-    <button id="duckButton" class="floating-button" aria-label="ไปหน้าเลือกเพลง">🦆</button>
+    <button id="duckButton" class="floating-button" aria-label="ไปหน้าเป็ด">🦆</button>
     <button id="fullscreenButton" class="floating-button" aria-label="เปิด/ปิดเต็มจอ">📱</button>
-    <button id="cameraButton" class="floating-button" aria-label="ถ่ายรูป">📸</button>
-
-    <input type="file" id="photoInput" accept="image/*" capture="environment" style="display: none;">
 
     <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const averageForm = document.getElementById('averageForm');
-            const skuInput = document.getElementById('sku');
-            const muInput = document.getElementById('mu');
-            const daysInput = document.getElementById('days');
-            const resultCard = document.getElementById('resultCard');
-            const avgSkuSpan = document.getElementById('avgSku');
-            const avgMuSpan = document.getElementById('avgMu');
-            const resetButton = document.getElementById('resetButton');
-
-            // Floating buttons
-            const homeButton = document.getElementById('homeButton');
-            const duckButton = document.getElementById('duckButton');
-            const fullscreenButton = document.getElementById('fullscreenButton');
-            
-            // สำหรับฟีเจอร์ถ่ายรูปในหน้า Daily Average
-            const photoInput = document.getElementById('photoInput');
-            const cameraButton = document.getElementById('cameraButton');
-            const dailyPhotoPreview = document.getElementById('dailyPhotoPreview');
-            const photoPreviewContainer = document.getElementById('photoPreviewContainer');
-            const photoCardContainer = document.getElementById('photoCardContainer');
-            const clearPhotoButton = document.getElementById('clearPhotoButton');
-
-            // โหลดค่าที่บันทึกไว้ใน Local Storage
-            const savedSku = localStorage.getItem('totalSku');
-            const savedMu = localStorage.getItem('totalMu');
-            const savedDays = localStorage.getItem('totalDays');
-
-            if (savedSku) skuInput.value = savedSku;
-            if (savedMu) muInput.value = savedMu;
-            if (savedDays) daysInput.value = savedDays;
-
-            // ตรวจสอบพารามิเตอร์จาก URL สำหรับค่าเริ่มต้น (จากหน้า index.html)
+        document.addEventListener("DOMContentLoaded", () => {
             const urlParams = new URLSearchParams(window.location.search);
-            const skuDailyFromIndex = urlParams.get('skuDaily');
-            const muDailyFromIndex = urlParams.get('muDaily');
+            const targetSku = parseFloat(urlParams.get('skuDaily')) || 0;
+            const targetMu = parseFloat(urlParams.get('muDaily')) || 0;
 
-            if (skuDailyFromIndex) {
-                // สามารถใช้ค่านี้เพื่อแสดงหรือคำนวณต่อได้หากต้องการ
-                // console.log(`SKU Daily Goal from Index: ${skuDailyFromIndex}`);
+            const targetSkuDisplay = document.getElementById('targetSku');
+            const targetMuDisplay = document.getElementById('targetMu');
+            const currentSkuInput = document.getElementById('currentSku');
+            const currentMuInput = document.getElementById('currentMu');
+            const skuProgressBar = document.getElementById('skuProgressBar');
+            const muProgressBar = document.getElementById('muProgressBar');
+            const clearDataButton = document.getElementById('clearDataButton');
+
+            // แสดงเป้าหมายประจำวัน
+            targetSkuDisplay.textContent = targetSku.toFixed(0);
+            targetMuDisplay.textContent = targetMu.toFixed(0);
+
+            // โหลดค่าจาก Local Storage
+            const savedSku = localStorage.getItem('dailySku');
+            const savedMu = localStorage.getItem('dailyMu');
+            
+            // กำหนดค่าเริ่มต้นให้กับช่องกรอกข้อมูล
+            // ถ้าค่าที่โหลดมาเป็น null หรือ '0' ให้แสดงเป็นค่าว่าง เพื่อให้ placeholder ปรากฏ
+            // มิฉะนั้น ให้แสดงค่าที่โหลดมา
+            currentSkuInput.value = (savedSku === null || savedSku === '0') ? '' : savedSku;
+            currentMuInput.value = (savedMu === null || savedMu === '0') ? '' : savedMu;
+
+            // ฟังก์ชันอัปเดตความคืบหน้า
+            function updateProgress() {
+                // ใช้ parseFloat จากค่าใน input โดยตรง ถ้าว่างก็ถือว่าเป็น 0
+                const currentSku = parseFloat(currentSkuInput.value) || 0;
+                const currentMu = parseFloat(currentMuInput.value) || 0;
+
+                const targetSkuNum = targetSku;
+                const targetMuNum = targetMu;
+
+                // คำนวณเปอร์เซ็นต์ SKU
+                let skuPercentage = 0;
+                if (targetSkuNum > 0) {
+                    skuPercentage = Math.min(100, (currentSku / targetSkuNum) * 100);
+                }
+                skuProgressBar.style.width = skuPercentage + '%';
+                skuProgressBar.textContent = skuPercentage.toFixed(0) + '%';
+                skuProgressBar.style.backgroundColor = getProgressBarColor(skuPercentage);
+
+                // คำนวณเปอร์เซ็นต์ MU
+                let muPercentage = 0;
+                if (targetMuNum > 0) {
+                    muPercentage = Math.min(100, (currentMu / targetMuNum) * 100);
+                }
+                muProgressBar.style.width = muPercentage + '%';
+                muProgressBar.textContent = muPercentage.toFixed(0) + '%';
+                muProgressBar.style.backgroundColor = getProgressBarColor(muPercentage);
+
+                // บันทึกค่าลง Local Storage
+                // ถ้าช่องว่าง (ไม่มีการกรอก) ให้บันทึกเป็น '0' เพื่อรักษาประเภทข้อมูล
+                localStorage.setItem('dailySku', currentSkuInput.value === '' ? '0' : currentSkuInput.value);
+                localStorage.setItem('dailyMu', currentMuInput.value === '' ? '0' : currentMuInput.value);
             }
-            if (muDailyFromIndex) {
-                // console.log(`MU Daily Goal from Index: ${muDailyFromIndex}`);
-            }
 
-            // คำนวณค่าเฉลี่ยเมื่อโหลดหน้าครั้งแรก (ถ้ามีข้อมูล)
-            if (savedSku && savedMu && savedDays) {
-                calculateAverage();
-            }
-
-            averageForm.addEventListener('submit', (event) => {
-                event.preventDefault(); // ป้องกันการรีโหลดหน้า
-                calculateAverage();
-            });
-
-            function calculateAverage() {
-                const sku = parseFloat(skuInput.value);
-                const mu = parseFloat(muInput.value);
-                const days = parseFloat(daysInput.value);
-
-                if (!isNaN(sku) && !isNaN(mu) && !isNaN(days) && days > 0) {
-                    const avgSku = (sku / days).toFixed(2);
-                    const avgMu = (mu / days).toFixed(2);
-
-                    avgSkuSpan.textContent = avgSku;
-                    avgMuSpan.textContent = avgMu;
-                    resultCard.style.display = 'block';
-
-                    // บันทึกค่าลง Local Storage
-                    localStorage.setItem('totalSku', sku);
-                    localStorage.setItem('totalMu', mu);
-                    localStorage.setItem('totalDays', days);
+            // ฟังก์ชันกำหนดสี ProgressBar
+            function getProgressBarColor(percentage) {
+                if (percentage >= 100) {
+                    return '#28a745'; // เขียวเมื่อถึงเป้าหมาย
+                } else if (percentage >= 75) {
+                    return '#ffc107'; // เหลืองเมื่อใกล้ถึง
                 } else {
-                    alert('กรุณากรอกข้อมูล SKU, MU และจำนวนวันให้ครบถ้วนและถูกต้อง (จำนวนวันต้องมากกว่า 0)');
-                    resultCard.style.display = 'none';
+                    return '#007bff'; // น้ำเงินเมื่อยังห่างไกล
                 }
             }
 
-            resetButton.addEventListener('click', () => {
-                skuInput.value = '';
-                muInput.value = '';
-                daysInput.value = '';
-                resultCard.style.display = 'none';
-                localStorage.removeItem('totalSku');
-                localStorage.removeItem('totalMu');
-                localStorage.removeItem('totalDays');
+            // เพิ่ม Event Listener สำหรับการเปลี่ยนแปลงข้อมูล
+            currentSkuInput.addEventListener('input', updateProgress);
+            currentMuInput.addEventListener('input', updateProgress);
+
+            // ปุ่มเคลียร์ข้อมูล
+            clearDataButton.addEventListener('click', () => {
+                currentSkuInput.value = ""; // เคลียร์เป็นค่าว่าง
+                currentMuInput.value = ""; // เคลียร์เป็นค่าว่าง
+                localStorage.removeItem('dailySku'); // ลบข้อมูลออกจาก Local Storage
+                localStorage.removeItem('dailyMu');
+                updateProgress(); // อัปเดต Progress Bar และแสดง placeholder
             });
 
-            // --- ส่วนของฟีเจอร์ถ่ายรูปในหน้า Daily Average ---
-
-            // โหลดรูปภาพที่บันทึกไว้ใน Local Storage ตอนโหลดหน้า
-            const savedPhotoDataUrl = localStorage.getItem('dailyPhoto');
-            if (savedPhotoDataUrl) {
-                dailyPhotoPreview.src = savedPhotoDataUrl;
-                photoPreviewContainer.style.display = 'block';
-                photoCardContainer.style.display = 'block'; // แสดง container รูปภาพ
-            } else {
-                photoCardContainer.style.display = 'none'; // ซ่อน container ถ้าไม่มีรูป
-            }
-
-            // เมื่อกดปุ่มกล้อง (Floating Button) ให้คลิก input type="file" ที่ซ่อนไว้
-            cameraButton.addEventListener('click', () => {
-                photoInput.click();
-            });
-
-            // เมื่อเลือกไฟล์รูปภาพ (จากการถ่ายหรือเลือกในเครื่อง)
-            photoInput.addEventListener('change', (event) => {
-                const file = event.target.files[0];
-                if (file) {
-                    const reader = new FileReader();
-                    reader.onload = (e) => {
-                        const imageDataUrl = e.target.result;
-                        dailyPhotoPreview.src = imageDataUrl;
-                        photoPreviewContainer.style.display = 'block';
-                        photoCardContainer.style.display = 'block'; // แสดง container รูปภาพเมื่อมีรูป
-                        localStorage.setItem('dailyPhoto', imageDataUrl); // บันทึกรูปใหม่ทับของเก่า
-                    };
-                    reader.readAsDataURL(file); // อ่านไฟล์เป็น Data URL
-                }
-            });
-
-            // ปุ่มลบรูปภาพ
-            clearPhotoButton.addEventListener('click', () => {
-                dailyPhotoPreview.src = '';
-                photoPreviewContainer.style.display = 'none';
-                photoCardContainer.style.display = 'none'; // ซ่อน container เมื่อลบรูป
-                localStorage.removeItem('dailyPhoto'); // ลบรูปภาพออกจาก Local Storage
-            });
-
-            // --- สิ้นสุดส่วนของฟีเจอร์ถ่ายรูป ---
-
-            // Navigation for floating buttons
-            homeButton.addEventListener('click', () => {
+            // Event Listeners สำหรับ Floating Buttons
+            document.getElementById("homeButton").addEventListener("click", () => {
                 window.location.href = "index.html";
             });
 
-            duckButton.addEventListener('click', () => {
+            document.getElementById("duckButton").addEventListener("click", () => {
                 window.location.href = "songs.html";
             });
 
-            fullscreenButton.addEventListener('click', () => {
+            document.getElementById("fullscreenButton").addEventListener("click", () => {
                 if (!document.fullscreenElement) {
                     document.documentElement.requestFullscreen().catch((err) => {
                         console.error(`ไม่สามารถเปิดโหมดเต็มจอได้: ${err.message}`);
@@ -286,6 +149,9 @@
                     document.exitFullscreen();
                 }
             });
+
+            // เรียกใช้ฟังก์ชันอัปเดตครั้งแรกเมื่อโหลดหน้าเว็บ
+            updateProgress();
         });
     </script>
 </body>
