--- a/average.html
+++ b/average.html
@@ -1,30 +1,91 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>ผลลัพธ์ค่าเฉลี่ย</title>
-  <link href="https://fonts.googleapis.com/css2?family=Kanit&family=Sarabun&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="average-style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+    <title>ผลลัพธ์ค่าเฉลี่ย Order Picker</title>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="average-style.css" />
+    <style>
+        /* จัดวางตำแหน่งปุ่มลอยตัวเฉพาะหน้า average.html */
+        .floating-button {
+            position: fixed;
+            right: 20px; /* ให้ปุ่มทั้งหมดอยู่ทางขวาเหมือนหน้า index */
+            width: 60px;
+            height: 60px;
+            font-size: 28px;
+            border-radius: 50%;
+            background: radial-gradient(circle at center, #ffffffee, #ddddddcc);
+            box-shadow: 0 12px 25px rgba(0, 0, 0, 0.4);
+            cursor: pointer;
+            z-index: 10;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: none;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            animation: floaty 2.5s ease-in-out infinite;
+        }
+        @keyframes floaty {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-8px); }
+        }
+        /* กำหนดตำแหน่งของแต่ละปุ่ม */
+        #homeButton { top: 50%; margin-top: -120px; transform: translateY(-50%); }
+        #duckButton { top: 50%; margin-top: -40px; transform: translateY(-50%); } /* "กลางขวา" คือปุ่มนี้ */
+        #dailyAverageButton { top: 50%; margin-top: 40px; transform: translateY(-50%); }
+        #fullscreenButton { bottom: 20px; right: 20px; margin-top: 0; transform: none; animation: none; /* ไม่ให้ลอย */ }
+
+        /* ปรับขนาดปุ่มบนมือถือ */
+        @media (max-width: 768px) {
+            .floating-button {
+                width: 50px;
+                height: 50px;
+                font-size: 24px;
+                right: 10px;
+            }
+            #homeButton { top: 50%; margin-top: -105px; transform: translateY(-50%); }
+            #duckButton { top: 50%; margin-top: -35px; transform: translateY(-50%); }
+            #dailyAverageButton { top: 50%; margin-top: 35px; transform: translateY(-50%); }
+            #fullscreenButton { bottom: 10px; right: 10px; }
+        }
+        @media (max-width: 400px) {
+            .floating-button {
+                width: 45px;
+                height: 45px;
+                font-size: 20px;
+                right: 5px;
+            }
+            #homeButton { margin-top: -90px; }
+            #duckButton { margin-top: -30px; }
+            #dailyAverageButton { margin-top: 30px; }
+            #fullscreenButton { bottom: 5px; right: 5px; }
+        }
+    </style>
 </head>
-<body style="font-family: 'Kanit', 'Sarabun', sans-serif;">
-  <div class="background"></div>
+<body>
+    <div class="background"></div>
 
-  <div class="content-wrapper fade-slide-in">
-    <main>
-      <h1 class="title-no-wrap">ผลลัพธ์ค่าเฉลี่ย</h1>
-      <div id="result-container" class="result-container">
-        <!-- ผลลัพธ์ภาพและข้อความจะแสดงตรงนี้ -->
-      </div>
-    </main>
-  </div>
+    <div class="content-wrapper fade-slide-in">
+        <main>
+            <h1 class="title-no-wrap">📊 ผลลัพธ์ค่าเฉลี่ย Order Picker</h1>
+            <div id="result-display" class="result-display">
+                </div>
+        </main>
+        <footer>
+            <p>เว็บไซต์นี้ถูกพัฒนาขึ้นเพื่อช่วยคำนวณค่าเฉลี่ยออเดอร์</p>
+            <p>โดยเน้นให้ผู้ใช้งานสามารถกรอกข้อมูลและรับผลลัพธ์ได้รวดเร็ว</p>
+            <p>โค้ดเขียนด้วย HTML, CSS และ JavaScript เพื่อให้โหลดไว</p>
+            <p>พัฒนาโดย Jack Makro © 2025 | ทีมงาน: Team Dev RoshanzeroX</p>
+            <p><span class="footer-icon">📞</span> ติดต่อ: P'Jack OCS Lock 12</p>
+        </footer>
+    </div>
 
-  <!-- ปุ่มกลับหน้าแรก -->
-  <button id="homeButton" class="floating-button right" aria-label="กลับหน้าแรก">🏠</button>
+    <button id="homeButton" class="floating-button" aria-label="กลับหน้าแรก">🏠</button>
+    <button id="duckButton" class="floating-button" aria-label="ไปหน้าเลือกเพลง">🦆</button>
+    <button id="dailyAverageButton" class="floating-button" aria-label="ไปหน้าเฉลี่ยรายวัน">💰</button>
+    <button id="fullscreenButton" class="floating-button" aria-label="เปิด/ปิดเต็มจอ">📱</button>
 
-  <!-- ปุ่ม Fullscreen -->
-  <button id="fullscreenButton" class="floating-button left" aria-label="ขยายเต็มจอ">🖥️</button>
-
-  <script src="average-script.js"></script>
+    <script src="average-script.js"></script>
 </body>
 </html>
