--- a/average.html
+++ b/average.html
@@ -10,7 +10,7 @@
         /* จัดวางตำแหน่งปุ่มลอยตัวเฉพาะหน้า average.html */
         .floating-button {
             position: fixed;
-            right: 20px; /* ให้ปุ่มทั้งหมดอยู่ทางขวาเหมือนหน้า index */
+            right: 20px; /* ให้ปุ่มทั้งหมดอยู่ทางขวา */
             width: 60px;
             height: 60px;
             font-size: 28px;
@@ -31,12 +31,12 @@
             50% { transform: translateY(-8px); }
         }
         /* กำหนดตำแหน่งของแต่ละปุ่ม */
-        #homeButton { top: 50%; margin-top: -120px; transform: translateY(-50%); }
-        #duckButton { top: 50%; margin-top: -40px; transform: translateY(-50%); } /* "กลางขวา" คือปุ่มนี้ */
-        #dailyAverageButton { top: 50%; margin-top: 40px; transform: translateY(-50%); }
-        #fullscreenButton { bottom: 20px; right: 20px; margin-top: 0; transform: none; animation: none; /* ไม่ให้ลอย */ }
+        #homeButton { top: 20px; } /* ปุ่มแรก */
+        #duckButton { top: 100px; } /* ปุ่มสอง */
+        #dailyAverageButton { top: 180px; } /* ปุ่มสาม (ปุ่มถุงเงิน) */
+        #fullscreenButton { bottom: 20px; right: 20px; top: unset; animation: none; /* ไม่ให้ลอย */ }
 
-        /* ปรับขนาดปุ่มบนมือถือ */
+        /* ปรับขนาดและตำแหน่งปุ่มบนมือถือ */
         @media (max-width: 768px) {
             .floating-button {
                 width: 50px;
@@ -44,9 +44,9 @@
                 font-size: 24px;
                 right: 10px;
             }
-            #homeButton { top: 50%; margin-top: -105px; transform: translateY(-50%); }
-            #duckButton { top: 50%; margin-top: -35px; transform: translateY(-50%); }
-            #dailyAverageButton { top: 50%; margin-top: 35px; transform: translateY(-50%); }
+            #homeButton { top: 10px; }
+            #duckButton { top: 70px; }
+            #dailyAverageButton { top: 130px; }
             #fullscreenButton { bottom: 10px; right: 10px; }
         }
         @media (max-width: 400px) {
@@ -56,9 +56,9 @@
                 font-size: 20px;
                 right: 5px;
             }
-            #homeButton { margin-top: -90px; }
-            #duckButton { margin-top: -30px; }
-            #dailyAverageButton { margin-top: 30px; }
+            #homeButton { top: 5px; }
+            #duckButton { top: 60px; }
+            #dailyAverageButton { top: 115px; }
             #fullscreenButton { bottom: 5px; right: 5px; }
         }
     </style>
@@ -72,14 +72,7 @@
             <div id="result-display" class="result-display">
                 </div>
         </main>
-        <footer>
-            <p>เว็บไซต์นี้ถูกพัฒนาขึ้นเพื่อช่วยคำนวณค่าเฉลี่ยออเดอร์</p>
-            <p>โดยเน้นให้ผู้ใช้งานสามารถกรอกข้อมูลและรับผลลัพธ์ได้รวดเร็ว</p>
-            <p>โค้ดเขียนด้วย HTML, CSS และ JavaScript เพื่อให้โหลดไว</p>
-            <p>พัฒนาโดย Jack Makro © 2025 | ทีมงาน: Team Dev RoshanzeroX</p>
-            <p><span class="footer-icon">📞</span> ติดต่อ: P'Jack OCS Lock 12</p>
-        </footer>
-    </div>
+        </div>
 
     <button id="homeButton" class="floating-button" aria-label="กลับหน้าแรก">🏠</button>
     <button id="duckButton" class="floating-button" aria-label="ไปหน้าเลือกเพลง">🦆</button>
